--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,1 +1,17 @@
+{
+  "name": "ahamstree-mvp",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.49.0"
+  },
+  "devDependencies": {
+    "vite": "^5.4.0"
+  }
+}
 
